[package]
name = "flussab-aiger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flussab = { version = "0.3.0", path = "../flussab" }
thiserror = "1.0.30"
num-traits = "0.2.14"
zwohash = "0.1.2"

[dev-dependencies]
flussab-cnf = { version = "0.3.0", path = "../flussab-cnf" }
tempfile = "3.3.0"
duct = "0.13.6"
