[package]
name = "flussab-cnf"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = "0.4.7"
flussab = { version = "0.1.0", path = "../flussab" }
thiserror = "1.0.24"
