[package]
name = "flussab-cnf"
version = "0.1.1"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"
description = "DIMACS CNF file format parser and writer"
repository = "https://github.com/jix/flussab"
license = "0BSD"
readme = "README.md"
keywords = ["cnf", "dimacs-cnf", "parser", "writer"]
categories = ["parser-implementations", "encoding"]

[dependencies]
itoa = "0.4.7"
flussab = { version = "0.1.0", path = "../flussab" }
thiserror = "1.0.24"
