[package]
name = "flussab-cnf"
version = "0.3.1"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2021"
description = "DIMACS CNF file format parser and writer"
repository = "https://github.com/jix/flussab"
license = "0BSD"
readme = "README.md"
keywords = ["cnf", "dimacs-cnf", "parser", "writer"]
categories = ["parser-implementations", "encoding"]

[dependencies]
flussab = { version = "0.3.0", path = "../flussab" }
thiserror = "1.0.50"
num-traits = "0.2.17"

[dev-dependencies]
assert_matches = "1.5.0"
