[package]
name = "flussab"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2021"
description = "Utilities for writing parsers"
repository = "https://github.com/jix/flussab"
license = "0BSD"
readme = "README.md"
keywords = ["parser", "streaming", "recursive-descent", "text", "binary"]
categories = ["parsing"]

[dependencies]
num-traits = "0.2.14"
