[package]
name = "flussab"
version = "0.3.1"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2021"
description = "Utilities for writing parsers"
repository = "https://github.com/jix/flussab"
license = "0BSD"
readme = "README.md"
keywords = ["parser", "streaming", "recursive-descent", "text", "binary"]
categories = ["parsing"]

[dependencies]
itoap = "1.0.1"
num-traits = "0.2.17"
